--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/adamfitzpatrick/mighty-runner-authorizer#readme",
   "devDependencies": {
-    "aws-sdk": "^2.439.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^6.1.3",
-    "nyc": "^14.0.0",
-    "rewire": "^4.0.1",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.3.0"
+    "aws-sdk": "2.439.0",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "mocha": "6.1.3",
+    "nyc": "14.0.0",
+    "rewire": "4.0.1",
+    "sinon": "7.3.2",
+    "sinon-chai": "3.3.0"
   }
 }
